--- a/src/components/Configuration/Configuration.module.css
+++ b/src/components/Configuration/Configuration.module.css
@@ -14,6 +14,7 @@
 }
 
 .tag {
+    width: min-content;
     color: var(--secondary-color);
     font-size: var(--font-size-s);
     font-style: normal;
