--- a/src/components/ui/BackgroundVideo/BackgroundVideo.module.css
+++ b/src/components/ui/BackgroundVideo/BackgroundVideo.module.css
@@ -1,6 +1,4 @@
 .background-video {
-    width: 100vw;
-    height: 100vh;
     object-fit: cover;
     position: fixed;
     left: 0;
